--- a/PathTracerNET/PathTracerNET.csproj
+++ b/PathTracerNET/PathTracerNET.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PTObject.cs" />
+    <Compile Include="Vec3.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
