--- a/PathTracerTests/PathTracerTests.vcxproj
+++ b/PathTracerTests/PathTracerTests.vcxproj
@@ -17,6 +17,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ray3Tests.cpp" />
+    <ClCompile Include="SphereTests.cpp" />
     <ClCompile Include="Vec3Tests.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
