more unit tests

--- a/PathTracerTests/PathTracerTests.vcxproj
+++ b/PathTracerTests/PathTracerTests.vcxproj
@@ -18,7 +18,9 @@
   <ItemGroup>
     <ClCompile Include="Ray3Tests.cpp" />
     <ClCompile Include="RectangularPlaneTests.cpp" />
+    <ClCompile Include="RotationTests.cpp" />
     <ClCompile Include="SphereTests.cpp" />
+    <ClCompile Include="TranslationTests.cpp" />
     <ClCompile Include="TriangularPlaneTests.cpp" />
     <ClCompile Include="Vec3Tests.cpp" />
   </ItemGroup>
