[added] defocus blur

--- a/PathTracerGUI/PathTracerGUI.csproj
+++ b/PathTracerGUI/PathTracerGUI.csproj
@@ -35,7 +35,7 @@
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup>
-    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
+    <RunPostBuildEvent>Always</RunPostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>PathTracerGUI.Program</StartupObject>
