--- a/PathTracerNET/PathTracerNET.csproj
+++ b/PathTracerNET/PathTracerNET.csproj
@@ -68,6 +68,9 @@
     <Compile Include="Materials\Metal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PTObject.cs" />
+    <Compile Include="Texture.cs" />
+    <Compile Include="Textures\CheckerboardTexture.cs" />
+    <Compile Include="Textures\ConstantTexture.cs" />
     <Compile Include="Vec3.cs" />
   </ItemGroup>
   <ItemGroup>
